@@ -149,46 +149,56 @@ namespace MySql.Data.MySqlClient.Tests
 			}
 		}
 
-		[Test]
-		public void TestAllowZeroDateTime()
-		{
-			execSQL("INSERT INTO Test (id, d, dt) VALUES (1, '0000-00-00', '0000-00-00 00:00:00')");
+        /// <summary>
+        /// Bug #9619 Cannot update row using DbDataAdapter when row contains an invalid date 
+        /// </summary>
+        [Test]
+        public void TestAllowZeroDateTime()
+        {
+            execSQL("INSERT INTO Test (id, d, dt) VALUES (1, '0000-00-00', '0000-00-00 00:00:00')");
 
-			MySqlConnection c = new MySqlConnection(
-				conn.ConnectionString + ";pooling=false;AllowZeroDatetime=true" );
-			c.Open();
-			MySqlDataReader reader = null;
-			try 
-			{
-				MySqlCommand cmd = new MySqlCommand("SELECT * FROM Test", c);
-				reader = cmd.ExecuteReader();
-				reader.Read();
+            MySqlConnection c = new MySqlConnection(
+                conn.ConnectionString + ";pooling=false;AllowZeroDatetime=true");
+            c.Open();
+            MySqlDataReader reader = null;
+            try
+            {
+                MySqlCommand cmd = new MySqlCommand("SELECT * FROM Test", c);
+                reader = cmd.ExecuteReader();
+                reader.Read();
 
-				Assert.IsTrue( reader.GetValue(1) is MySqlDateTime );
-				Assert.IsTrue( reader.GetValue(2) is MySqlDateTime );
+                Assert.IsTrue(reader.GetValue(1) is MySqlDateTime);
+                Assert.IsTrue(reader.GetValue(2) is MySqlDateTime);
 
-				Assert.IsFalse( reader.GetMySqlDateTime(1).IsValidDateTime );
-				Assert.IsFalse( reader.GetMySqlDateTime(2).IsValidDateTime );
+                Assert.IsFalse(reader.GetMySqlDateTime(1).IsValidDateTime);
+                Assert.IsFalse(reader.GetMySqlDateTime(2).IsValidDateTime);
 
-				try 
-				{
-					reader.GetDateTime(1);
-					Assert.Fail("This should not succeed");
-				}
-				catch (MySqlConversionException) {}
+                try
+                {
+                    reader.GetDateTime(1);
+                    Assert.Fail("This should not succeed");
+                }
+                catch (MySqlConversionException) { }
+                reader.Close();
+                reader = null;
 
-
-			}
-			catch (MySqlException ex) 
-			{
-				Assert.Fail( ex.Message );
-			}
-			finally 
-			{
-				if (reader != null) reader.Close();
-				c.Close();
-			}
-		}
+                DataTable dt = new DataTable();
+                MySqlDataAdapter da = new MySqlDataAdapter("SELECT * FROM test", c);
+                MySqlCommandBuilder cb = new MySqlCommandBuilder(da);
+                da.Fill(dt);
+                dt.Rows[0]["id"] = 2;
+                da.Update(dt);
+            }
+            catch (Exception ex)
+            {
+                Assert.Fail(ex.Message);
+            }
+            finally
+            {
+                if (reader != null) reader.Close();
+                c.Close();
+            }
+        }
 
 		[Test]
 		public void InsertDateTimeValue()
