@@ -33,6 +33,7 @@
 	Bug #14592 Wrong column length returned for VARCHAR UTF8 columns 	
 	Bug #18391 Better error handling for the .NET class "MySqlCommand" needed. 	
 	Bug #8131 Data Adapter doesn't close connection 
+	Bug #9619 Cannot update row using DbDataAdapter when row contains an invalid date 
 	
 x-xx-05 - Version 1.0.7
 
